make vertical scroll overlay to avoid page flickering; refactor html templates hierarchy

--- a/static/custom.css
+++ b/static/custom.css
@@ -1,3 +1,7 @@
+body {
+  overflow: overlay;
+}
+
 #nav .active {
   border-bottom: 1px solid;
 }
